--- a/src/components/TransparentNavbar/style.css
+++ b/src/components/TransparentNavbar/style.css
@@ -39,8 +39,8 @@
     width: 60px;
     height: 60px;
     border-radius: 50%;
-    border: 2px solid white;
-    background: rgba(0, 0, 0, 0.8);
+    border: 2px solid #06184e;
+    background: #06184e;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -51,13 +51,13 @@
 }
 
 .hamburger-circle:hover {
-    background: rgba(0, 0, 0, 0.9);
+    background: 06184e(65, 105, 225, 0.8);
     transform: scale(1.05);
 }
 
 .hamburger-circle.active {
     background: rgba(255, 255, 255, 0.9);
-    border-color: rgba(0, 0, 0, 0.8);
+    border-color: #06184e;
 }
 
 /* Hamburger Icon */
@@ -101,7 +101,7 @@
 .cross-line {
     width: 20px;
     height: 2px;
-    background: black;
+    background: #06184e;
     border-radius: 1px;
     transition: all 0.3s ease;
 }
@@ -121,7 +121,9 @@
     left: 0;
     width: 100%;
     height: 100vh;
-    background: rgba(0, 0, 0, 0.95);
+    /* here is background color */
+    background: #06184e;
+    /* background: rgba(0, 0, 0, 0.95); */
     display: flex;
     align-items: center;
     justify-content: center;
