--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -3,8 +3,8 @@
 --------------------------------------------------------------*/
 .wpo-site-footer,
 .wpo-site-footer-s2 {
-    background: url(../../images/footer.jpg) no-repeat center center;
-	background-size: cover;
+    background: #06184e;
+    // footer color
     position: relative;
     font-size: 15px;
     overflow: hidden;
@@ -16,8 +16,8 @@
         width: 100%;
         height: 100%;
         content: "";
-        background: #111;
-        opacity: .5;
+        background: rgba(0, 0, 0, 0.1);
+        opacity: 1;
     }
 
     ul {
